feat: parallax image

--- a/www/about-us.html
+++ b/www/about-us.html
@@ -65,7 +65,7 @@
             </div>
         </header>
 
-        <section class="o-hero">
+        <section class="o-hero js--imageParallax">
             <div class="container container--xl">
                 <div class="o-hero__body">
                     <div class="row">
@@ -80,7 +80,7 @@
                     </div>
                 </div>
             </div>
-            <div class="o-hero__figure">
+            <div class="o-hero__figure js--imageParallax__image">
                 <img src="./img/hero-img-002.jpg" srcset="./img/hero-img-002@2x.jpg 2x" alt="hero-img">
             </div>
         </section>
@@ -98,7 +98,7 @@
         <section class="o-section o-section--light pt-0">
             <div class="a-container a-container--xl">
                 <picture class="a-figure">
-                    <source class="a-figure__img" media="(min-width:600px)" srcset="./img/timeline.svg">
+                    <source class="a-figure__img" media="(min-width:600px)" srcset="./img/timeline.svg 1x">
                     <img class="a-figure__img" src="./img/timeline-mobile.svg"  alt="timeline">
                 </picture>
             </div>
