--- a/www/contact-us.html
+++ b/www/contact-us.html
@@ -77,9 +77,10 @@
                 </div>
             </div>
             <picture class="o-hero__figure">
-                <source media="(min-width:800px)" src="./img/map.jpg" srcset="./img/map@2x.jpg 2x">
-                <source media="(min-width:400px)" src="./img/map-tablet.jpg" srcset="./img/map-tablet@2x.jpg 2x">
-                <img src="./img/map-mobile.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="map-mobile photo">
+                <source media="(min-width:800px)" srcset="./img/map.jpg 1x, ./img/map@2x.jpg 2x">
+                <source media="(min-width:400px)" srcset="./img/map-tablet.jpg 1x, ./img/map-tablet@2x.jpg 2x">
+                <source media="(max-width:399px)" srcset="./img/map-mobile.jpg 1x, ./img/map-mobile@2x.jpg 2x">
+                <img src="./img/map-desktop.jpg" alt="map-mobile photo">
             </picture>
         </section>
 
