--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -66,7 +66,7 @@
             </div>
         </header>
 
-        <section class="o-hero">
+        <section class="o-hero js--imageParallax">
             <div class="a-container">
                 <div class="o-hero__body">
                     <div class="row">
@@ -84,7 +84,7 @@
                     </div>
                 </div>
             </div>
-            <div class="o-hero__figure">
+            <div class="o-hero__figure js--imageParallax__image">
                 <img src="./img/Energie.jpg" srcset="./img/Energie@2x.jpg 2x" alt="">
             </div>
         </section>
@@ -153,7 +153,7 @@
                 <div class="m-white-box">
                     <h2 class="a-title a-title--bold">Povolení</h2>
                     <div class="row g-1 mt-5 js--lightgallery">
-                        <div class="col-md-6" data- data-download-url="./img/certificate-big.jpg" data-sub-html="<strong>ISO 13485 EN</strong><br>Medical devices, Quality anagement systems"src="./img/certificate-big.jpg" data-download-url="./img/certificate-big.jpg" data-sub-html="hfsdfsojfs">
+                        <div class="col-md-6" data-src="./img/certificate-big.jpg" data-download-url="./img/certificate-big.jpg" data-sub-html="<strong>ISO 13485 EN</strong><br>Medical devices, Quality anagement systems">
                             <a href="./img/certificate-big.jpg" class="a-btn a-btn--outline-primary m-white-box__btn">
                                 Měření emisí KGJ 1
                                 <svg xmlns="http://www.w3.org/2000/svg" width="41" height="29" viewBox="0 0 41 29" style="enable-background:new 0 0 41 29" xml:space="preserve">
@@ -331,7 +331,6 @@
                                         </div>
                                     </div>
                                 </div>
-
                                 <div class="swiper-slide m-carousel__slide" data-src="./img/certificate-big.jpg" data-download-url="./img/certificate-big.jpg" data-sub-html="<strong>ISO 13485 EN</strong><br>Medical devices, Quality anagement systems" aria-label="2/5">
                                     <div class="m-carousel__body">
                                         <div class="m-carousel__figure">
@@ -395,7 +394,6 @@
                             </div>
                         </div>
                     </div>
-
                     <div class="m-swiper__controls">
                         <button class="swiper-button-prev m-swiper__btn m-swiper__btn--prev">
                             <svg width="15" height="28" viewBox="0 0 15 28" xmlns="http://www.w3.org/2000/svg">
