--- a/www/index.html
+++ b/www/index.html
@@ -243,9 +243,10 @@
                 </div>
             </div>
             <picture class="o-hero__figure">
-                <source media="(min-width:1000px)" src="./img/map.jpg" srcset="./img/map@2x.jpg 2x">
-                <source media="(min-width:700px)" src="./img/map-tablet.jpg" srcset="./img/map-tablet@2x.jpg 2x">
-                <img src="./img/map-mobile.jpg" srcset="./img/map-mobile@2x.jpg 2x" alt="map-mobile photo                   ">
+                <source media="(min-width:1000px)" srcset="./img/map.jpg 1x, ./img/map@2x.jpg 2x">
+                <source media="(min-width:700px)" srcset="./img/map-tablet.jpg 1x, ./img/map-tablet@2x.jpg 2x">
+                <source media="(max-width:699px)" srcset="./img/map-mobile.jpg 1x, ./img/map-mobile@2x.jpg 2x">
+                <img src="./img/map.jpg" alt="map">
             </picture>
         </section>
 
