feat: footer padding

--- a/www/service-detail.html
+++ b/www/service-detail.html
@@ -569,7 +569,7 @@
                 <div class="row">
                     <div class="col-xl-3">
                         <div class="o-footer__col o-footer__col--nav">
-                            <h5 class="a-title a-title--footer mb-3">Sitemap</h5>
+                            <h5 class="a-title a-title--footer mb-3 pt-3">Sitemap</h5>
                             <ul class="a-list a-list--row a-list--white">
                                 <li class="d-block">
                                     <a href="#">Our services</a>
