--- a/www/about-us.html
+++ b/www/about-us.html
@@ -74,7 +74,7 @@
                         </div>
                         <div class="col-xl-10 d-flex justify-content-end">
                             <div class="a-perex a-perex--md">
-                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Suspendisse sagittis ultrices augue. Fusce dui leo, imperdiet in, aliquam sit amet, feugiat eu, orci. Donec ipsum massa, ullamcorper in, auctor et, scelerisque sed, est. Fusce dui leo, imperdiet in.</p>
+                                <p>Společnost ONIVON a.s., byla založena v roce 2000. Skládá se z výrobních provozů Lisovna kovů (1991), Nástrojárna (1991), Distribuce Energií (2000) Lisovna plastů (2005), Lisovna plastů-Medical (2008) a Medical Devices (2013).</p>
                             </div>
                         </div>
                     </div>
@@ -95,12 +95,65 @@
             </div>
         </section>
 
-        <section class="o-section o-section--light pt-0">
+        <section class="o-section o-section--light">
             <div class="a-container a-container--xl">
-                <picture class="a-figure">
-                    <source class="a-figure__img" media="(min-width:600px)" srcset="./img/timeline.svg 1x">
-                    <img class="a-figure__img" src="./img/timeline-mobile.svg"  alt="timeline">
-                </picture>
+                <div class="m-timeline">
+                    <ul class="m-timeline__line">
+                        <li class="m-timeline__item">
+                            <div class="m-timeline__content">
+                                <h3 class="a-title m-timeline__title">
+                                    1991
+                                </h3>
+                                <div class="a-perex m-timeline__perex">
+                                    <p>Lisovna kovů</p>
+                                    <p> Nástrojárna</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="m-timeline__item">
+                            <div class="m-timeline__content m-timeline__content--bottom">
+                                <h3 class="a-title m-timeline__title">
+                                    2000
+                                </h3>
+                                <div class="a-perex m-timeline__perex">
+                                    <p>Společnost ONIVON a.s., byla založena v roce 2000.</p>
+                                    <p> Distribuce energií</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="m-timeline__item">
+                            <div class="m-timeline__content">
+                                <h3 class="a-title m-timeline__title">
+                                    2005
+                                </h3>
+                                <div class="a-perex m-timeline__perex">
+                                    <p> Lisovna plastů</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="m-timeline__item">
+                            <div class="m-timeline__content m-timeline__content--bottom">
+                                <h3 class="a-title m-timeline__title">
+                                    2008
+                                </h3>
+                                <div class="a-perex m-timeline__perex">
+                                    <p> Lisovna plastů-Medical</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="m-timeline__item">
+                            <div class="m-timeline__content">
+                                <h3 class="a-title m-timeline__title">
+                                    2013
+                                </h3>
+                                <div class="a-perex m-timeline__perex">
+                                    <p>Medical Devices</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="m-timeline__item"></li>
+                    </ul>
+                </div>
             </div>
         </section>
 
