feat: timeline mobile version

--- a/www/about-us.html
+++ b/www/about-us.html
@@ -151,7 +151,7 @@
                                 </div>
                             </div>
                         </li>
-                        <li class="m-timeline__item"></li>
+                        <!-- <li class="m-timeline__item"></li> -->
                     </ul>
                 </div>
             </div>
