feat: timeline-wrapper

--- a/www/about-us.html
+++ b/www/about-us.html
@@ -98,61 +98,83 @@
         <section class="o-section o-section--light">
             <div class="a-container a-container--xl">
                 <div class="m-timeline">
-                    <ul class="m-timeline__line">
-                        <li class="m-timeline__item">
-                            <div class="m-timeline__content">
-                                <h3 class="a-title m-timeline__title">
-                                    1991
-                                </h3>
-                                <div class="a-perex m-timeline__perex">
-                                    <p>Lisovna kovů</p>
-                                    <p> Nástrojárna</p>
+                    <div class="m-timeline__wrapper">
+                        <ul class="m-timeline__line">
+                            <li class="m-timeline__item">
+                                <div class="m-timeline__content">
+                                    <h3 class="a-title m-timeline__title">
+                                        1991
+                                    </h3>
+                                    <div class="a-perex m-timeline__perex">
+                                        <p>Lisovna kovů</p>
+                                        <p> Nástrojárna</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="m-timeline__item">
-                            <div class="m-timeline__content m-timeline__content--bottom">
-                                <h3 class="a-title m-timeline__title">
-                                    2000
-                                </h3>
-                                <div class="a-perex m-timeline__perex">
-                                    <p>Společnost ONIVON a.s., byla založena v roce 2000.</p>
-                                    <p> Distribuce energií</p>
+                            </li>
+                            <li class="m-timeline__item">
+                                <div class="m-timeline__content m-timeline__content--bottom">
+                                    <h3 class="a-title m-timeline__title">
+                                        2000
+                                    </h3>
+                                    <div class="a-perex m-timeline__perex">
+                                        <p>Společnost ONIVON a.s., byla založena v roce 2000.</p>
+                                        <p> Distribuce energií</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="m-timeline__item">
-                            <div class="m-timeline__content">
-                                <h3 class="a-title m-timeline__title">
-                                    2005
-                                </h3>
-                                <div class="a-perex m-timeline__perex">
-                                    <p> Lisovna plastů</p>
+                            </li>
+                            <li class="m-timeline__item">
+                                <div class="m-timeline__content">
+                                    <h3 class="a-title m-timeline__title">
+                                        2005
+                                    </h3>
+                                    <div class="a-perex m-timeline__perex">
+                                        <p> Lisovna plastů</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="m-timeline__item">
-                            <div class="m-timeline__content m-timeline__content--bottom">
-                                <h3 class="a-title m-timeline__title">
-                                    2008
-                                </h3>
-                                <div class="a-perex m-timeline__perex">
-                                    <p> Lisovna plastů-Medical</p>
+                            </li>
+                            <li class="m-timeline__item">
+                                <div class="m-timeline__content m-timeline__content--bottom">
+                                    <h3 class="a-title m-timeline__title">
+                                        2008
+                                    </h3>
+                                    <div class="a-perex m-timeline__perex">
+                                        <p> Lisovna plastů-Medical</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <li class="m-timeline__item">
-                            <div class="m-timeline__content">
-                                <h3 class="a-title m-timeline__title">
-                                    2013
-                                </h3>
-                                <div class="a-perex m-timeline__perex">
-                                    <p>Medical Devices</p>
+                            </li>
+                            <li class="m-timeline__item">
+                                <div class="m-timeline__content">
+                                    <h3 class="a-title m-timeline__title">
+                                        2013
+                                    </h3>
+                                    <div class="a-perex m-timeline__perex">
+                                        <p>Medical Devices</p>
+                                    </div>
                                 </div>
-                            </div>
-                        </li>
-                        <!-- <li class="m-timeline__item"></li> -->
-                    </ul>
+                            </li>
+                            <li class="m-timeline__item">
+                                <div class="m-timeline__content m-timeline__content--bottom">
+                                    <h3 class="a-title m-timeline__title">
+                                        2013
+                                    </h3>
+                                    <div class="a-perex m-timeline__perex">
+                                        <p>Medical Devices</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="m-timeline__item">
+                                <div class="m-timeline__content">
+                                    <h3 class="a-title m-timeline__title">
+                                        2013
+                                    </h3>
+                                    <div class="a-perex m-timeline__perex">
+                                        <p>Medical Devices</p>
+                                    </div>
+                                </div>
+                            </li>
+                            <!-- <li class="m-timeline__item"></li> -->
+                        </ul>
+                    </div>
                 </div>
             </div>
         </section>
