--- a/www/about-us.html
+++ b/www/about-us.html
@@ -95,13 +95,14 @@
             </div>
         </section>
 
-        <section class="o-section o-section--light">
+        <section class="o-section o-section--light js--pin">
             <div class="a-container a-container--xl">
-                <div class="m-timeline">
+                <div class="m-timeline js--timelineAnimation">
+                    <div class="m-timeline__dots js--dotted-line"></div>
                     <div class="m-timeline__wrapper">
-                        <ul class="m-timeline__line">
-                            <li class="m-timeline__item">
-                                <div class="m-timeline__content">
+                        <ul class="m-timeline__list">
+                            <li class="m-timeline__item js--line">
+                                <div class="m-timeline__content js--timeline-content">
                                     <h3 class="a-title m-timeline__title">
                                         1991
                                     </h3>
@@ -111,8 +112,8 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item">
-                                <div class="m-timeline__content m-timeline__content--bottom">
+                            <li class="m-timeline__item js--line">
+                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content">
                                     <h3 class="a-title m-timeline__title">
                                         2000
                                     </h3>
@@ -122,8 +123,8 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item">
-                                <div class="m-timeline__content">
+                            <li class="m-timeline__item js--line">
+                                <div class="m-timeline__content js--timeline-content">
                                     <h3 class="a-title m-timeline__title">
                                         2005
                                     </h3>
@@ -132,8 +133,8 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item">
-                                <div class="m-timeline__content m-timeline__content--bottom">
+                            <li class="m-timeline__item js--line">
+                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content">
                                     <h3 class="a-title m-timeline__title">
                                         2008
                                     </h3>
@@ -142,8 +143,8 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item">
-                                <div class="m-timeline__content">
+                            <li class="m-timeline__item js--line">
+                                <div class="m-timeline__content js--timeline-content">
                                     <h3 class="a-title m-timeline__title">
                                         2013
                                     </h3>
@@ -152,8 +153,8 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item">
-                                <div class="m-timeline__content m-timeline__content--bottom">
+                            <li class="m-timeline__item js--line">
+                                <div class="m-timeline__content m-timeline__content--bottom js--timeline-content">
                                     <h3 class="a-title m-timeline__title">
                                         2013
                                     </h3>
@@ -162,8 +163,8 @@
                                     </div>
                                 </div>
                             </li>
-                            <li class="m-timeline__item">
-                                <div class="m-timeline__content">
+                            <li class="m-timeline__item js--line">
+                                <div class="m-timeline__content js--timeline-content">
                                     <h3 class="a-title m-timeline__title">
                                         2013
                                     </h3>
